--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'link.fls:swipestack:0.3.0'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
